<resources>
    <string name="app_name">Lajar Tantjap</string>

    <string name="title_name">Title Name</string>
    <string name="description">Description</string>
    <string name="release_date">2019</string>
    <string name="backdrop">Backdrop</string>
    <string name="poster">Poster</string>
    <string name="title">Title</string>
    <string name="year">2019</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="change_language_settings">Language Settings</string>
    <string name="data_not_found">Data not found</string>
    <string name="favorites">Favorites</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="removed_from_favorite">Removed from favorite</string>
    <string name="no_internet">No internet connection</string>
    <string name="search_title">Search</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">No Favorites</string>
    <string name="notification_content">Hi..! We miss you</string>
    <string name="sub_text">Sub text</string>
    <string name="new_release_notification">%1s is released. Click to read more!</string>
    <string name="notification_category">Reminder</string>
    <string name="daily_reminder_key" translatable="false">daily_reminder</string>
    <string name="daily_reminder_summary">You will get notification to come back to this app</string>
    <string name="daily_reminder_title">Daily Reminder</string>
    <string name="new_release_key" translatable="false">new_release</string>
    <string name="new_release_title">New Release</string>
    <string name="new_release_summary">Get new release notification</string>
    <string name="new_release_summary_on">You will get notification when new movies were released</string>
    <string name="new_release_summary_off">You will not get notification when new movies were released :(</string>
    <string name="setting_category">Other Setting</string>
    <string name="locale_setting_key" translatable="false">locale_setting</string>
    <string name="locale_setting_title">Locale</string>
    <string name="locale_setting_summary">Change language and locale</string>
    <string name="unknown_uri">Unknown URI %1s</string>
</resources>
